--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.5.5",
+    "@eps1lon/babel-plugin-optimize-react": "^0.0.4-alpha.4",
     "@testing-library/react": "^8.0.6",
     "@types/chai": "^4.1.7",
     "@types/chai-dom": "^0.0.7",
@@ -69,7 +70,6 @@
     "babel-plugin-istanbul": "^5.2.0",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-optimize-clsx": "^2.3.0",
-    "babel-plugin-optimize-react": "^0.0.4",
     "babel-plugin-preval": "^2.0.0",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "babel-plugin-tester": "^6.4.0",
