--- a/package.json
+++ b/package.json
@@ -143,11 +143,11 @@
     "**/@babel/runtime": "^7.4.4",
     "**/hoist-non-react-statics": "^3.2.1",
     "**/next/terser": "^4.1.2",
-    "**/react": "0.0.0-db3ae32b8",
-    "**/react-dom": "0.0.0-db3ae32b8",
-    "**/react-is": "0.0.0-db3ae32b8",
-    "**/react-test-renderer": "0.0.0-db3ae32b8",
-    "**/scheduler": "0.0.0-db3ae32b8"
+    "**/react": "16.9.0-rc.0",
+    "**/react-dom": "16.9.0-rc.0",
+    "**/react-is": "16.9.0-rc.0",
+    "**/react-test-renderer": "16.9.0-rc.0",
+    "**/scheduler": "0.15.0-rc.0"
   },
   "nyc": {
     "include": [
