move cpy-cli to docs workspace - /docs/pacage.json

--- a/docs/package.json
+++ b/docs/package.json
@@ -99,6 +99,7 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.1.0",
     "babel-plugin-unwrap-createstyles": "^4.1.0",
+    "cpy-cli": "^2.0.0",
     "gm": "^1.23.0"
   }
 }
