--- a/.eslintignore
+++ b/.eslintignore
@@ -8,6 +8,7 @@
 /examples/preact/scripts
 /packages/babel-plugin-unwrap-createstyles/test/__fixtures__/
 /packages/babel-plugin-material-ui/test/__fixtures__/
+/packages/babel-plugin-material-ui/dist
 /packages/material-ui-codemod/lib
 /packages/material-ui-codemod/src/*/*.test
 /packages/material-ui-codemod/src/*/*.test.js
