Build plugin using tsc

--- a/packages/babel-plugin-material-ui/tsconfig.json
+++ b/packages/babel-plugin-material-ui/tsconfig.json
@@ -1,3 +1,14 @@
 {
-  "extends": "../../tsconfig"
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "strict": true,
+    "esModuleInterop": true,
+    "declaration": true,
+    "skipLibCheck": true
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
