--- a/packages/babel-plugin-material-ui/package.json
+++ b/packages/babel-plugin-material-ui/package.json
@@ -16,16 +16,12 @@
     "url": "https://github.com/mui-org/material-ui/issues"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "tsc -p tsconfig.json",
     "test": "yarn build && cd ../../ && cross-env NODE_ENV=test mocha 'packages/babel-plugin-material-ui/test/index.js'"
   },
   "devDependencies": {
     "@types/babel__core": "^7.1.2",
     "babel-plugin-tester": "^6.4.0",
-    "rollup": "^1.19.4",
-    "rollup-plugin-commonjs": "^10.0.2",
-    "rollup-plugin-terser": "^5.1.1",
-    "rollup-plugin-typescript": "^1.0.1",
     "typescript": "^3.5.3"
   },
   "dependencies": {
