--- a/.eslintignore
+++ b/.eslintignore
@@ -3,7 +3,7 @@
 /benchmark/**/dist
 /coverage
 /docs/export
-/docs/pages/playground.tsx
+/docs/pages/playground/
 /examples/create-react-app*/src/serviceWorker.js
 /examples/gatsby/public/
 /examples/preact/config
