[core] Enforce straight quote (#34686)

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "lint": "eslint . --cache --report-unused-disable-directives --ext .js,.ts,.tsx --max-warnings 0",
     "lint:ci": "eslint . --report-unused-disable-directives --ext .js,.ts,.tsx --max-warnings 0",
     "stylelint": "stylelint --reportInvalidScopeDisables --reportNeedlessDisables docs/**/*.{js,ts,tsx}",
-    "markdownlint": "markdownlint \"**/*.md\" --config .markdownlint.jsonc",
+    "markdownlint": "markdownlint-cli2 \"**/*.md\"",
     "prettier": "node ./scripts/prettier.js",
     "prettier:all": "node ./scripts/prettier.js write",
     "size:snapshot": "node --max-old-space-size=4096 ./scripts/sizeSnapshot/create",
@@ -154,7 +154,7 @@
     "karma-webpack": "^5.0.0",
     "lerna": "^5.6.2",
     "lodash": "^4.17.21",
-    "markdownlint-cli": "^0.32.2",
+    "markdownlint-cli2": "^0.5.1",
     "mocha": "^10.0.0",
     "node-fetch": "^2.6.7",
     "nx": "^14.8.4",
