--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "karma": "^6.4.1",
     "karma-browserstack-launcher": "~1.6.0",
     "karma-chrome-launcher": "^3.1.1",
+    "karma-firefox-launcher": "^2.1.2",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-mocha": "^2.0.1",
     "karma-sourcemap-loader": "^0.3.8",
