--- a/.github/workflows/check-if-pr-has-label.yml
+++ b/.github/workflows/check-if-pr-has-label.yml
@@ -8,6 +8,8 @@ jobs:
   test-label-applied:
     # Tests that label is added on the PR
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - uses: mnajdova/github-action-required-labels@v2.1
         with:
