--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -1,4 +1,5 @@
-name: 'Maintenance'
+name: Maintenance
+
 on:
   # So that PRs touching the same files as the push are updated
   push:
@@ -20,6 +21,9 @@ jobs:
     # We rely on other pushes to mark these branches as outdated.
     if: ${{ github.actor != 'l10nbot' }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - run: echo "${{ github.actor }}"
       - name: check if prs are dirty
