--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -230,6 +230,7 @@
 /packages/mui-base/src/Portal/ @mnajdova @michaldudak
 /packages/mui-base/src/SelectUnstyled/ @michaldudak @mnajdova
 /packages/mui-base/src/SliderUnstyled/ @michaldudak @mnajdova
+/packages/mui-base/src/SnackbarUnstyled/ @siriwatknp @hbjORbj @michaldudak
 /packages/mui-base/src/SwitchUnstyled/ @michaldudak @mnajdova
 /packages/mui-base/src/TabPanelUnstyled/ @mnajdova @michaldudak
 /packages/mui-base/src/TabUnstyled/ @mnajdova @michaldudak
@@ -264,6 +265,7 @@
 /docs/data/base/components/portal/ @mnajdova @michaldudak
 /docs/data/base/components/select/ @michaldudak @mnajdova
 /docs/data/base/components/slider/ @michaldudak @mnajdova
+/docs/data/base/components/snackbar/ @siriwatknp @hbjORbj @michaldudak
 /docs/data/base/components/switch/ @michaldudak @mnajdova
 /docs/data/base/components/table-pagination/ @siriwatknp @michaldudak
 /docs/data/base/components/tabs/ @mnajdova @michaldudak
@@ -288,10 +290,12 @@
 /packages/mui-joy/src/ChipDelete/ @siriwatknp @michaldudak
 /packages/mui-joy/src/CircularProgress/ @siriwatknp @hbjORbj
 /packages/mui-joy/src/Container/ @siriwatknp @hbjORbj
+/packages/mui-joy/src/CssBaseline/ @mnajdova @michaldudak @siriwatknp
 /packages/mui-joy/src/Divider/ @siriwatknp @michaldudak
 /packages/mui-joy/src/FormControl/ @michaldudak @mnajdova @siriwatknp
 /packages/mui-joy/src/FormHelperText/ @michaldudak @mnajdova @siriwatknp
 /packages/mui-joy/src/FormLabel/ @michaldudak @mnajdova @siriwatknp
+/packages/mui-joy/src/GlobalStyles/ @mnajdova @michaldudak @siriwatknp
 /packages/mui-joy/src/Grid/ @siriwatknp @hbjORbj
 /packages/mui-joy/src/IconButton/ @michaldudak @mnajdova @siriwatknp
 /packages/mui-joy/src/Input/ @michaldudak @mnajdova @siriwatknp
@@ -310,6 +314,7 @@
 /packages/mui-joy/src/Option/ @michaldudak @mnajdova @siriwatknp
 /packages/mui-joy/src/Radio/ @michaldudak @mnajdova @siriwatknp
 /packages/mui-joy/src/RadioGroup/ @michaldudak @mnajdova @siriwatknp
+/packages/mui-joy/src/ScopedCssBaseline/ @mnajdova @michaldudak @siriwatknp
 /packages/mui-joy/src/Select/ @michaldudak @mnajdova @siriwatknp
 /packages/mui-joy/src/Sheet/ @siriwatknp @hbjORbj
 /packages/mui-joy/src/Slider/ @michaldudak @mnajdova @siriwatknp
@@ -322,6 +327,7 @@
 /packages/mui-joy/src/Tabs/ @mnajdova @michaldudak @siriwatknp
 /packages/mui-joy/src/TextField/ @michaldudak @mnajdova @siriwatknp
 /packages/mui-joy/src/Textarea/ @michaldudak @mnajdova @siriwatknp
+/packages/mui-joy/src/Tooltip/ @siriwatknp @michaldudak
 /packages/mui-joy/src/Typography/ @siriwatknp @michaldudak
 /docs/data/joy/components/alert/ @siriwatknp @hbjORbj
 /docs/data/joy/components/aspect-ratio/ @siriwatknp @michaldudak
@@ -332,6 +338,7 @@
 /docs/data/joy/components/card/ @siriwatknp @hbjORbj
 /docs/data/joy/components/checkbox/ @michaldudak @mnajdova @siriwatknp
 /docs/data/joy/components/chip/ @siriwatknp @michaldudak
+/docs/data/joy/components/css-baseline/ @mnajdova @michaldudak @siriwatknp
 /docs/data/joy/components/divider/ @siriwatknp @michaldudak
 /docs/data/joy/components/link/ @mnajdova @michaldudak @siriwatknp
 /docs/data/joy/components/list/ @siriwatknp @michaldudak
@@ -345,4 +352,5 @@
 /docs/data/joy/components/tabs/ @mnajdova @michaldudak @siriwatknp
 /docs/data/joy/components/text-field/ @michaldudak @mnajdova @siriwatknp
 /docs/data/joy/components/textarea/ @michaldudak @mnajdova @siriwatknp
+/docs/data/joy/components/tooltip/ @siriwatknp @michaldudak
 /docs/data/joy/components/typography/ @siriwatknp @michaldudak
