[core] Fix permissions in  workflow
See https://github.com/mui/mui-x/pull/6658 for more details.

--- a/.github/workflows/no-response.yml
+++ b/.github/workflows/no-response.yml
@@ -1,4 +1,4 @@
-name: No Response
+name: No response
 
 # Both `issue_comment` and `scheduled` event types are required for this Action
 # to work properly.
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-requests: write
+      issues: write
     steps:
       - uses: lee-dohm/no-response@v0.5.0
         with:
