[code] Ignore compiled icons in CodeQL
See the code output in https://github.com/mui/material-ui/actions/runs/3334099642/jobs/5516707442
It scan way more code than it needs to.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,7 +2,7 @@ name: CodeQL
 
 on:
   schedule:
-    - cron: '0 2 * * 1-5'
+    - cron: '0 2 * * *'
 
 jobs:
   analyze:
@@ -20,6 +20,7 @@ jobs:
         uses: github/codeql-action/init@ec3cf9c605b848da5f1e41e8452719eb1ccfb9a6 # tag=v2
         with:
           languages: typescript
+          config-file: ./.github/codeql/codeql-config.yml
           # If you wish to specify custom queries, you can do so here or in a config file.
           # By default, queries listed here will override any specified in a config file.
           # Prefix the list here with "+" to use these queries and those in the config file.
