[core] Remove default access to GitHub action scopes
Fix https://github.com/mui/material-ui/security/code-scanning/35

--- a/.github/workflows/check-if-pr-has-label.yml
+++ b/.github/workflows/check-if-pr-has-label.yml
@@ -4,6 +4,8 @@ on:
   pull_request:
     types: [opened, reopened, labeled, unlabeled]
 
+permissions: {}
+
 jobs:
   test-label-applied:
     # Tests that label is added on the PR
