--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,8 @@ on:
       - 'renovate/**'
   pull_request:
 
+permissions: {}
+
 jobs:
   # Tests dev-only scripts across all supported dev environments
   test-dev:
