--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ on:
       # We don't need to run CI twice (push+pull_request)
       - 'renovate/**'
   pull_request:
+    paths-ignore:
+      - 'docs/**'
+      - 'examples/**'
 
 permissions: {}
 
