--- a/packages/mui-core-downloads-tracker/package.json
+++ b/packages/mui-core-downloads-tracker/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "build": "mkdir build && yarn build:copy-files",
-    "build:copy-files": "node ../../scripts/copy-files.js",
+    "build:copy-files": "node ../../scripts/copyFiles",
     "prebuild": "rimraf build",
     "release": "yarn build && npm publish build"
   },
