--- a/packages/mui-types/package.json
+++ b/packages/mui-types/package.json
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/mui/material-ui/tree/master/packages/mui-types",
   "scripts": {
     "build": "mkdir build && cpy index.d.ts build/ && cpy OverridableComponentAugmentation.ts build/ && yarn build:copy-files",
-    "build:copy-files": "node ../../scripts/copy-files.js",
+    "build:copy-files": "node ../../scripts/copyFiles",
     "prebuild": "rimraf build",
     "release": "yarn build && npm publish build",
     "test": "echo 'No runtime test. Type tests are run with the `typescript` script.'",
