--- a/packages/mui-icons-material/package.json
+++ b/packages/mui-icons-material/package.json
@@ -33,9 +33,9 @@
     "build:lib:clean": "rimraf lib/ && yarn build:lib",
     "build:legacy": "echo 'Skip legacy build'",
     "build:modern": "echo 'Skip modern build'",
-    "build:node": "node ../../scripts/build node --largeFiles --outDir lib",
-    "build:stable": "node ../../scripts/build stable --largeFiles --outDir lib",
-    "build:copy-files": "node ../../scripts/copyFiles",
+    "build:node": "node ../../scripts/build.mjs node --largeFiles --outDir lib",
+    "build:stable": "node ../../scripts/build.mjs stable --largeFiles --outDir lib",
+    "build:copy-files": "node ../../scripts/copyFiles.mjs",
     "build:typings": "babel-node --config-file ../../babel.config.js ./scripts/create-typings.js",
     "prebuild": "rimraf build",
     "release": "yarn build && npm publish build",
