--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -16,7 +16,7 @@ on:
 permissions: {}
 
 jobs:
-  build:
+  test-dev:
     runs-on: ubuntu-latest
     steps:
       - run: 'echo "No build required"'
