--- a/packages/mui-icons-material/package.json
+++ b/packages/mui-icons-material/package.json
@@ -36,7 +36,7 @@
     "build:node": "node ../../scripts/build.mjs node --largeFiles --outDir lib",
     "build:stable": "node ../../scripts/build.mjs stable --largeFiles --outDir lib",
     "build:copy-files": "node ../../scripts/copyFiles.mjs",
-    "build:typings": "babel-node --config-file ../../babel.config.js ./scripts/create-typings.js",
+    "build:typings": "node ./scripts/create-typings.mjs",
     "prebuild": "rimraf build",
     "release": "yarn build && npm publish build",
     "src:download": "cd ../../ && babel-node --config-file ./babel.config.js packages/mui-icons-material/scripts/download.js",
