--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "lint:ci": "eslint . --report-unused-disable-directives --ext .js,.ts,.tsx --max-warnings 0",
     "stylelint": "stylelint --reportInvalidScopeDisables --reportNeedlessDisables docs/**/*.{js,ts,tsx}",
     "markdownlint": "markdownlint-cli2 \"**/*.md\"",
-    "prettier": "node ./scripts/prettier.mjs",
-    "prettier:all": "node ./scripts/prettier.mjs write",
+    "prettier": "pretty-quick --ignore-path .eslintignore",
+    "prettier:all": "prettier --write . --ignore-path .eslintignore",
     "size:snapshot": "node --max-old-space-size=4096 ./scripts/sizeSnapshot/create",
     "size:why": "yarn size:snapshot --analyze",
     "start": "yarn && yarn docs:dev",
@@ -164,6 +164,7 @@
     "piscina": "^3.2.0",
     "playwright": "^1.27.1",
     "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "raw-loader": "4.0.2",
