--- a/.github/ISSUE_TEMPLATE/4.docs-feedback.yml
+++ b/.github/ISSUE_TEMPLATE/4.docs-feedback.yml
@@ -1,6 +1,6 @@
 name: Docs feedback
 description: Improve documentation about MUI Core.
-labels: ['status: needs triage', 'docs']
+labels: ['status: needs triage', 'support: docs-feedback']
 title: '[docs] '
 body:
   - type: markdown
