--- a/package.json
+++ b/package.json
@@ -131,7 +131,8 @@
     "dtslint": "^4.2.1",
     "enzyme": "^3.11.0",
     "eslint": "^8.27.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-babel": "^5.3.1",
