--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@types/prettier": "^2.7.1",
     "@types/react": "^18.0.21",
     "@types/react-is": "^17.0.3",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/sinon": "^10.0.13",
     "@types/stylis": "^4.0.2",
     "@types/webpack": "^5.28.0",
