[core] Use TypeScript aliases instead of Babel aliases for the doc

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,11 @@
       "@mui/lab": ["./packages/mui-lab/src"],
       "@mui/lab/*": ["./packages/mui-lab/src/*"],
       "@mui/markdown": ["./docs/packages/markdown"],
+      // Swap the comments on the next four lines for using the styled-components as style engine
       "@mui/styled-engine": ["./packages/mui-styled-engine/src"],
       "@mui/styled-engine/*": ["./packages/mui-styled-engine/src/*"],
+      // "@mui/styled-engine": ["./packages/mui-styled-engine-sc/src"],
+      // "@mui/styled-engine/*": ["./packages/mui-styled-engine-sc/src/*"],
       "@mui/styled-engine-sc": ["./packages/mui-styled-engine-sc/src"],
       "@mui/styled-engine-sc/*": ["./packages/mui-styled-engine-sc/src/*"],
       "@mui/styles": ["./packages/mui-styles/src"],
@@ -29,16 +32,23 @@
       "@mui/system/*": ["./packages/mui-system/src/*"],
       "@mui/private-theming": ["./packages/mui-private-theming/src"],
       "@mui/private-theming/*": ["./packages/mui-private-theming/src/*"],
+      "@mui/utils": ["./packages/mui-utils/src"],
+      "@mui/utils/*": ["./packages/mui-utils/src/*"],
       "@mui/types": ["./packages/mui-types"],
       "@mui/base": ["./packages/mui-base/src"],
       "@mui/base/*": ["./packages/mui-base/src/*"],
       "@mui/docs": ["./packages/mui-docs/src"],
       "@mui/docs/*": ["./packages/mui-docs/src/*"],
+      "@mui/icons-material": ["./packages/mui-icons-material/lib"],
+      "@mui/icons-material/*": ["./packages/mui-icons-material/lib/*"],
       "@mui/material-next": ["./packages/mui-material-next/src"],
       "@mui/material-next/*": ["./packages/mui-material-next/src/*"],
       "@mui/joy": ["./packages/mui-joy/src"],
       "@mui/joy/*": ["./packages/mui-joy/src/*"],
+      "docs/*": ["./docs/*"],
+      "pages/*": ["./docs/pages"],
       "test/*": ["./test/*"],
+      "modules/*": ["./modules/*"],
       "typescript-to-proptypes": ["./packages/typescript-to-proptypes/src"]
     },
     // Otherwise we get react-native typings which conflict with dom.lib.
