--- a/packages/mui-lab/tsconfig.build.json
+++ b/packages/mui-lab/tsconfig.build.json
@@ -3,16 +3,18 @@
   // Actual .ts source files are transpiled via babel
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "noEmit": false,
+    "composite": true,
     "declaration": true,
-    "rootDir": "./src",
-    "outDir": "./build",
-    "emitDeclarationOnly": true
+    "noEmit": false,
+    "emitDeclarationOnly": true,
+    "outDir": "build",
+    "rootDir": "./src"
   },
   "include": ["src/**/*.ts*"],
   "exclude": ["src/**/*.d.ts", "src/**/*.test.*", "./**/*.spec.*", "**/test-utils.tsx"],
   "references": [
-    { "path": "../mui-material/tsconfig.build.json" },
-    { "path": "../mui-system/tsconfig.build.json" }
+    { "path": "../mui-utils/tsconfig.build.json" },
+    { "path": "../mui-system/tsconfig.build.json" },
+    { "path": "../mui-material/tsconfig.build.json" }
   ]
 }
