--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,25 @@
     "allowSyntheticDefaultImports": true,
     "noErrorTruncation": false,
     "allowJs": true,
+    "composite": true,
     "paths": {
-      "@mui/material": ["./packages/mui-material/src"],
-      "@mui/material/*": ["./packages/mui-material/src/*"],
+      "@mui/base": ["./packages/mui-base/src"],
+      "@mui/base/*": ["./packages/mui-base/src/*"],
+      "@mui/docs": ["./packages/mui-docs/src"],
+      "@mui/docs/*": ["./packages/mui-docs/src/*"],
+      "@mui/icons-material": ["./packages/mui-icons-material/lib"],
+      "@mui/icons-material/*": ["./packages/mui-icons-material/lib/*"],
+      "@mui/joy": ["./packages/mui-joy/src"],
+      "@mui/joy/*": ["./packages/mui-joy/src/*"],
       "@mui/lab": ["./packages/mui-lab/src"],
       "@mui/lab/*": ["./packages/mui-lab/src/*"],
       "@mui/markdown": ["./docs/packages/markdown"],
+      "@mui/material": ["./packages/mui-material/src"],
+      "@mui/material/*": ["./packages/mui-material/src/*"],
+      "@mui/material-next": ["./packages/mui-material-next/src"],
+      "@mui/material-next/*": ["./packages/mui-material-next/src/*"],
+      "@mui/private-theming": ["./packages/mui-private-theming/src"],
+      "@mui/private-theming/*": ["./packages/mui-private-theming/src/*"],
       // Swap the comments on the next four lines for using the styled-components as style engine
       "@mui/styled-engine": ["./packages/mui-styled-engine/src"],
       "@mui/styled-engine/*": ["./packages/mui-styled-engine/src/*"],
@@ -30,29 +43,26 @@
       "@mui/styles/*": ["./packages/mui-styles/src/*"],
       "@mui/system": ["./packages/mui-system/src"],
       "@mui/system/*": ["./packages/mui-system/src/*"],
-      "@mui/private-theming": ["./packages/mui-private-theming/src"],
-      "@mui/private-theming/*": ["./packages/mui-private-theming/src/*"],
+      "@mui/types": ["./packages/mui-types"],
       "@mui/utils": ["./packages/mui-utils/src"],
       "@mui/utils/*": ["./packages/mui-utils/src/*"],
-      "@mui/types": ["./packages/mui-types"],
-      "@mui/base": ["./packages/mui-base/src"],
-      "@mui/base/*": ["./packages/mui-base/src/*"],
-      "@mui/docs": ["./packages/mui-docs/src"],
-      "@mui/docs/*": ["./packages/mui-docs/src/*"],
-      "@mui/icons-material": ["./packages/mui-icons-material/lib"],
-      "@mui/icons-material/*": ["./packages/mui-icons-material/lib/*"],
-      "@mui/material-next": ["./packages/mui-material-next/src"],
-      "@mui/material-next/*": ["./packages/mui-material-next/src/*"],
-      "@mui/joy": ["./packages/mui-joy/src"],
-      "@mui/joy/*": ["./packages/mui-joy/src/*"],
       "docs/*": ["./docs/*"],
+      "modules/*": ["./modules/*"],
       "pages/*": ["./docs/pages"],
       "test/*": ["./test/*"],
-      "modules/*": ["./modules/*"],
       "typescript-to-proptypes": ["./packages/typescript-to-proptypes/src"]
     },
     // Otherwise we get react-native typings which conflict with dom.lib.
     "types": ["node", "react", "react-is/next"]
   },
-  "exclude": ["**/.*/", "**/build", "**/node_modules", "docs/export"]
+  "exclude": ["**/.*/", "**/build", "**/node_modules", "docs/export"],
+  "references": [
+    { "path": "../mui-base/tsconfig.build.json" },
+    { "path": "../mui-joy/tsconfig.build.json" },
+    { "path": "../mui-lab/tsconfig.build.json" },
+    { "path": "../mui-material/tsconfig.build.json" },
+    { "path": "../mui-material-next/tsconfig.build.json" },
+    { "path": "../mui-system/tsconfig.build.json" },
+    { "path": "../mui-utils/tsconfig.build.json" },
+  ]
 }
