--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,10 @@ on:
       # We don't need to run CI twice (push+pull_request)
       - 'renovate/**'
   pull_request:
+    paths-ignore:
+      # should sync with ci-check.yml as a workaround to bypass github checks
+      - 'docs/**'
+      - 'examples/**'
 
 permissions: {}
 
