--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -1,10 +1,11 @@
+# This workflow is a workaround for ci.yml to bypass the github checks
+#
+# Ref: https://docs.github.com/en/repositories/configuring-branches-and-merges-in-your-repository/defining-the-mergeability-of-pull-requests/troubleshooting-required-status-checks#handling-skipped-but-required-checks
 name: CI
 
 on:
   push:
     branches-ignore:
-      # Renovate branches are always Pull Requests.
-      # We don't need to run CI twice (push+pull_request)
       - 'renovate/**'
   pull_request:
     paths:
@@ -14,9 +15,7 @@ on:
 permissions: {}
 
 jobs:
-  # Tests dev-only scripts across all supported dev environments
   test-dev:
-    # l10nbot does not affect dev scripts.
     if: ${{ github.actor != 'l10nbot' }}
     runs-on: ${{ matrix.os }}
     strategy:
