--- a/docs/package.json
+++ b/docs/package.json
@@ -91,7 +91,8 @@
     "lz-string": "^1.4.4",
     "markdown-to-jsx": "^7.1.7",
     "material-ui-popup-state": "^2.0.1",
-    "next-transpile-modules": "^9.0.0",
+    "next": "13.0.2",
+    "next-transpile-modules": "^10.0.0",
     "notistack": "2.0.8",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.19",
