[core] Move API docs generator to an internal package

--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,13 +1,6 @@
 {
   "extends": "../tsconfig.json",
-  "include": [
-    "next-env.d.ts",
-    "types",
-    "src",
-    "pages",
-    "data",
-    "scripts/apiDocsBuilder/utils/generatePropDescription.ts"
-  ],
+  "include": ["next-env.d.ts", "types", "src", "pages", "data"],
   "compilerOptions": {
     "allowJs": true,
     "isolatedModules": true,
