--- a/packages/typescript-to-proptypes/package.json
+++ b/packages/typescript-to-proptypes/package.json
@@ -8,6 +8,8 @@
     "url": "https://github.com/mui/material-ui.git",
     "directory": "packages/typescript-to-proptypes"
   },
+  "type": "module",
+  "main": "src/index.ts",
   "author": "merceyz <merceyz@users.noreply.github.com>",
   "license": "MIT",
   "keywords": [
