--- a/docs/package.json
+++ b/docs/package.json
@@ -46,8 +46,8 @@
     "@mui/x-data-grid": "^5.17.13",
     "@mui/x-data-grid-generator": "^5.17.13",
     "@mui/x-data-grid-pro": "^5.17.13",
-    "@mui/x-date-pickers": "^5.0.7",
-    "@mui/x-date-pickers-pro": "^5.0.7",
+    "@mui/x-date-pickers": "6.0.0-alpha.9",
+    "@mui/x-date-pickers-pro": "6.0.0-alpha.9",
     "@mui/x-license-pro": "^5.17.12",
     "@trendmicro/react-interpolate": "^0.5.5",
     "@types/autosuggest-highlight": "^3.2.0",
